# brine

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  packet_dump.txt
containers/decompile/: README.md  decompile-client.sh
containers/minecraft-server/: docker-compose.yml
crates/brine_asset/: Cargo.toml
crates/brine_asset/examples/: bakery.rs  basic.rs
crates/brine_asset/src/api/: mod.rs
crates/brine_asset/src/bakery/models/: cuboid_math.rs
crates/brine_chunk/: Cargo.toml  README.md
crates/brine_chunk/src/: lib.rs
crates/brine_chunk/src/decode/: mod.rs
crates/brine_data/: Cargo.toml
crates/brine_data/src/: data.rs
crates/brine_data/src/blocks/: block.rs
crates/brine_net/: Cargo.toml
crates/brine_net/examples/: dummy.rs  strings.rs
crates/brine_net/src/: event.rs  plugin.rs  resource.rs  system_param.rs
crates/brine_net/src/codec/: string.rs
crates/brine_proto/: Cargo.toml
crates/brine_proto/src/: event.rs
crates/brine_proto/src/plugin/: successful_login.rs
crates/brine_proto_backend/: Cargo.toml
crates/brine_proto_backend/src/: codec.rs  plugin.rs  version.rs
crates/brine_proto_backend/src/backend_stevenarella/: chunks.rs  codec.rs  login.rs
crates/brine_render/: Cargo.toml
crates/brine_render/examples/: bake_chunk.rs  minecraft_textures.rs  texture_atlas.rs
crates/brine_render/src/chunk/: chunk_bakery.rs
crates/brine_render/src/texture/: atlas.rs  manager.rs  mc_textures.rs
crates/brine_voxel/: Cargo.toml
crates/brine_voxel/examples/: mesher.rs
crates/brine_voxel/examples/common/: mesh_viewer.rs  mod.rs
crates/brine_voxel/src/cuboid/: axis_aligned.rs  transform.rs
crates/brine_voxel_v1/: Cargo.toml
crates/brine_voxel_v1/examples/: texture_builder.rs
crates/brine_voxel_v1/src/: mesh.rs  texture.rs
crates/brine_voxel_v1/src/chunk_builder/: block_mesh.rs  component.rs  naive_blocks.rs  plugin.rs
crates/minecraft-assets-rs/src/api/: asset_pack.rs  mod.rs
crates/minecraft-assets-rs/src/schemas/: blockstates.rs
src/: chunk.rs  error.rs  login.rs  main.rs  server.rs
src/debug/: wireframe.rs
xtask/: Cargo.toml
xtask/src/: main.rs  protocol.rs
