[package]
name = "brine"
version = "0.0.1"
edition = "2021"
default-run = "brine"

[workspace]
resolver = "2"
members = [
    '.',
    './crates/*',
]

# Compile all dependencies (but no workspace members) with extra optimizations
# in debug mode (for a faster-running game with little to no recompilation cost).
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_fly_camera = "0.16.0"
bevy-inspector-egui = "0.35.0"
clap = { version = "4.5.53", features = ["derive"] }
futures-lite = "2.6.1"
serde = "1.0.228"
serde_json = "1.0.145"
steven_protocol = { path = "./third_party/stevenarella/protocol", default-features = false }
thiserror = "2.0.17"

brine_asset = { path = "./crates/brine_asset" }
brine_chunk = { path = "./crates/brine_chunk" }
brine_data = { path = "./crates/brine_data" }
brine_net = { path = "./crates/brine_net" }
brine_proto = { path = "./crates/brine_proto" }
brine_proto_backend = { path = "./crates/brine_proto_backend" }
brine_render = { path = "./crates/brine_render" }
brine_voxel = { path = "./crates/brine_voxel" }
brine_voxel_v1 = { path = "./crates/brine_voxel_v1" }

[patch.crates-io]
bevy_ecs = { path = "third_party/bevy_ecs-0.6.0-patched" }
winit = { path = "third_party/winit-0.26.1-patched" }
