[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
