[package]
name = "brine_asset"
version = "0.0.0"
edition = "2021"

[dependencies]
glam = "0.30.9"
indexmap = "2.12.1"
rayon = "1.11.0"
smallvec = "1.15.1"
tracing = "0.1.41"
bevy_ecs = "0.17.3"

brine_data = { path = "../brine_data" }
minecraft-assets = { path = "../minecraft-assets-rs" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
