[package]
name = "brine_net"
version = "0.0.0"
edition = "2021"

[dependencies]
async-channel = "2.5.0"
async-codec = "0.4.1"
async-net = "2.0.0"
bevy = { version = "0.17.3", default-features = false }
bevy_ecs = "0.17.3"
byteorder = "1.5.0"
crossbeam-channel = "0.5.15"
futures = "0.3.31"
futures-lite = "2.6.1"
thiserror = "2.0.17"
