[package]
name = "brine_proto_backend"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", default-features = false }
log = "0.4"
bevy_ecs = "0.17.3"
byteorder = "1.5.0"
pretty-hex = "0.4.1"
serde_json = "1.0.145"

brine_chunk = { path = "../brine_chunk" }
brine_net = { path = "../brine_net" }
brine_proto = { path = "../brine_proto" }
steven_protocol = { path = "../../third_party/stevenarella/protocol", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.13.2", features = ["attributes"] }
async-codec = "0.4.1"
futures = "0.3.31"
