[package]
name = "brine_render"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.17.3"
bevy_mesh = "0.17.3"
smallvec = "1.15.1"

brine_asset = { path = "../brine_asset" }
brine_chunk = { path = "../brine_chunk" }
brine_data = { path = "../brine_data" }
brine_voxel = { path = "../brine_voxel" }

[dev-dependencies]
bevy-inspector-egui = "0.35.0"
fastrand = "2.3.0"
minecraft-assets = { path = "../minecraft-assets-rs" }
