[package]
name = "brine_voxel_v1"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3" }
bevy_image = "0.17.3"
bevy_mesh = "0.17.3"

block-mesh = "0.2.0"
futures-lite = "2.6.1"

brine_asset = { path = "../brine_asset" }
brine_chunk = { path = "../brine_chunk" }
brine_data = { path = "../brine_data" }
brine_proto = { path = "../brine_proto" }
